update MathNAS poster

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
 			  <h3 class="sectionContentSubTitle"><a href="https://wangqinsi1.github.io/" target="_blank">Wang Qinsi*</a>, <strong>Jinghan Ke*</strong>, Zhi Liang</h3>
 			  	<h4 class="sectionContentSubTitle">Neural Information Processing Systems (NeurIPS) 2023</h4>
 			  	  <a href="https://openreview.net/pdf?id=e1l4ZYprQH" class="section2 btn" target="_blank">PDF</a>
-				  <button class="btn">Cite</button>
-<!--				  <button class="btn"><a href="https://github.com/wangqinsi1/MathNAS">Code</button>-->
+				  <a href="AboutPageAssets/images/other-material/mathnas-poster-6.png" class="section2 btn" target="_blank">Poster</a>
 				  <a href="https://github.com/wangqinsi1/MathNAS" class="section2 btn" target="_blank">Code</a>
 <!--				  <button class="btn">arXiv</button>-->
 		  </article>
