Update index.html, add news about Ph.D.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <h2 class="sectionTitle">News&nbsp;</h2>
 	<hr class="sectionTitleRule">
     <div class="section1Content">
+	  <p><span><i class="fas fa-volume-up"></i> [ 9 Nov 2023 ] : </span> I am currently looking for a Ph.D. position (2024 Fall).</p>
 	  <p><span><i class="fas fa-volume-up"></i> [ 22 Sep 2023 ] : </span> MathNAS was accepted by NeurIPS 2023.</p>
 	  <p><span><i class="fas fa-volume-up"></i> [ 31 Aug 2023 ] : </span> Diff-LfD was accepted by CoRL 2023 as Oral (6.6%).</p>
 	  <p><span><i class="fas fa-volume-up"></i> [ 26 Oct 2022 ] : </span> Joined the LinS lab at NUS and started doing research.</p>
