--- a/index.html
+++ b/index.html
@@ -7,55 +7,103 @@
 <link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+	
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page.-->
+<!--<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>-->
 </head>
 
 <body>
 <!-- Header content -->
 <header>
-  <div class="profileLogo"> 
-    <!-- Profile logo. Add a img tag in place of <span>. -->
-    <p class="logoPlaceholder"><!-- <img src="logoImage.png" alt="sample logo"> --><span>Ah~μ</span></p>
-  </div>
-  <div class="profilePhoto"> 
-    <!-- Profile photo --> 
-    <img src="AboutPageAssets/images/小象-259.jpg" alt="sample"> 
-<!--	<p class="profileCaption">&nbsp;</p>-->
-	<div class="profileLinks">
-    	<p><a href="jinghan@mail.ustc.edu.cn" target="_blank"><i class="fas fa-envelope"></i> Email</a></p>
-    	<p><a href="path-to-your-cv.pdf" target="_blank"><i class="fas fa-file-alt"></i> CV</a></p>
-    	<p><a href="https://github.com/Ah-miu" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
-    	<p><a href=""><i class="fab fa-twitter" target="_blank"></i> Twitter</a></p>
-    </div>
-  </div> 
-  <!-- Identity details -->
-  <section class="profileHeader">
-    <h1>Jinghan Ke&nbsp;</h1>
-    <h3>HAHAHAHAHA</h3>
-    <hr>
-    <p>I am a senior student at the School of Computer Science and Technology, University of Science and Technology of China.</p>
-	<p>Nowadays I work as Research Assistant at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>.</p>
-  </section>
-  <!-- Links to Social network accounts -->
-  <aside class="socialNetworkNavBar">
 <!--
-    <div class="socialNetworkNav"> 
-      <img src="AboutPageAssets/images/icons8-github-75.png" alt="sample"> </div>
-    <div class="socialNetworkNav"> 
-      <img src="AboutPageAssets/images/icons8-twitter-75.png"  alt="sample"> </div>
+  <div class="profileLogo"> 
+    <p class="logoPlaceholder"> <img src="logoImage.png" alt="sample logo"> <span>Ah~μ</span></p>
+  </div>
 -->
-  </aside>
+	<div class="profileContainer">
+	  <div class="profilePhoto"> 
+		<!-- Profile photo --> 
+		<img src="AboutPageAssets/images/小象-259.jpg" alt="sample"> 
+		<!--	<p class="profileCaption">&nbsp;</p>-->
+		  	
+			<div class="profileLinks">
+<!--
+				<p><a href="mailto:jinghan@mail.ustc.edu.cn" target="_blank"><i class="fas fa-envelope"></i> Email</a></p>
+				<p><a href="path-to-your-cv.pdf" target="_blank"><i class="fas fa-file-alt"></i> CV</a></p>
+				<p><a href="https://github.com/Ah-miu" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
+				<p><a href=""><i class="fab fa-twitter" target="_blank"></i> Twitter</a></p>
+-->
+				<ul>
+					<li class="list active">
+						<a href="#" target="_blank">
+							<span class="icon">
+								<ion-icon name="document-outline"></ion-icon>
+							</span>
+							<span class="icon-text">CV</span>
+						</a>
+					</li>
+					<li class="list">
+						<a href="mailto:jinghan@mail.ustc.edu.cn">
+							<span class="icon">
+								<ion-icon name="mail-outline"></ion-icon>
+							</span>
+							<span class="icon-text">Email</span>
+						</a>
+					</li>
+					<li class="list">
+						<a href="#wetchat" >
+							<span class="icon">
+								<ion-icon name="chatbubbles-outline"></ion-icon>
+							</span>
+							<span class="icon-text">WetChat</span>
+						</a>
+					</li>
+					<li class="list">
+						<a href="https://github.com/Ah-miu" target="_blank">
+							<span class="icon">
+								<ion-icon name="logo-github"></ion-icon>
+							</span>
+							<span class="icon-text">Github</span>
+						</a>
+					</li>
+					<div class="indicator"></div>
+				</ul>
+			</div>
+		  	<div id="wechat-modal" class="modal">
+			  <div class="modal-content">
+				<span class="close">&times;</span>
+				<img src="AboutPageAssets/images/Wechat-QR.jpg" alt="WeChat QR Code">
+			  </div>
+			</div>
+	  </div> 
+	  <!-- Identity details -->
+	  <section class="profileHeader">
+		<h1>Jinghan Ke&nbsp;</h1>
+<!--		<h3>HAHAHAHAHA</h3>-->
+		<hr>
+		<p>I am a senior student at the School of Computer Science and Technology, University of Science and Technology of China.</p>
+		<p>Nowadays I work as Research Assistant at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>.</p>
+	  </section>
+	  
+	</div>
 </header>
-	<br><br><br><br><br><br>
 
 <section class="scroll-show-container">
-	<img src="AboutPageAssets/images/gif-show/diff-mesh.gif" alt="sample">
-	<img src="AboutPageAssets/images/gif-show/VR-treadmill.gif" alt="sample">
-	<img src="AboutPageAssets/images/gif-show/FENG.gif" alt="sample">
-	<img src="AboutPageAssets/images/gif-show/WowKiddy.gif" alt="sample">
-	<img src="AboutPageAssets/images/手偶舞.gif" alt="sample">
+  <a href="https://sites.google.com/view/diff-lfd/" target="_blank">
+    <img src="AboutPageAssets/images/gif-show/teapot.gif" alt="Teapot">
+  </a>
+  <img src="AboutPageAssets/images/gif-show/VR-treadmill.gif" alt="VR Treadmill">
+  <a href="https://github.com/Ah-miu/Feng" target="_blank">
+    <img src="AboutPageAssets/images/gif-show/FENG.gif" alt="FENG">
+  </a>
+  <a href="https://github.com/OSH-2022/x-WowKiddy" target="_blank">
+    <img src="AboutPageAssets/images/gif-show/WowKiddy.gif" alt="WowKiddy">
+  </a>
+  <img src="AboutPageAssets/images/手偶舞.gif" alt="Hand Puppet Dance">
 </section>
+
 	
 <!-- content -->
 <section class="mainContent"> 
@@ -64,65 +112,110 @@
     <h2 class="sectionTitle">News&nbsp;</h2>
 	<hr class="sectionTitleRule">
     <div class="section1Content">
-	  <p><span><i class="fas fa-volume-up"></i> [ 22 Sep 2023 ] : </span> MathNAS was accepted by NeurIPS 2023.</p>
-	  <p><span><i class="fas fa-volume-up"></i> [ 31 Aug 2023 ] : </span> Diff-LfD was accepted by CoRL 2023 as Oral (6.6%).</p>
-	  <p><span><i class="fas fa-volume-up"></i> [ 26 Oct 2022 ] : </span> Joined the LinS lab at NUS and started doing research.</p>
+	  <p><span><span class="icon">								<ion-icon name="musical-notes-outline"></ion-icon></span> [ Sep 2023 ] : </span> MathNAS was accepted by NeurIPS 2023.</p>
+	  <p><span><span class="icon">								<ion-icon name="musical-notes-outline"></ion-icon></span> [ Aug 2023 ] : </span> Diff-LfD was accepted by CoRL 2023 as Oral (6.6%).</p>
+	  <p><span><span class="icon">								<ion-icon name="musical-notes-outline"></ion-icon></span> [ 26 Oct 2022 ] : </span> Joined the LinS lab at NUS and started doing research.</p>
     </div>
   </section>
 	
 	<!-- PUBLICATIONS -->
 	<section class="section2">
 		<h2 class="sectionTitle">Publications&nbsp;</h2>
-		<hr class="sectionTitleRule">
+<!--		<hr class="sectionTitleRule">-->
 		<hr class="sectionTitleRule2">
 
 	  <div class="newPaper" id="MathNAS">
+<!--
 		<div class="onlyIMG">
 			<img src="AboutPageAssets/images/img-show/MathNAS-contributions.png" alt="sample">
 		  </div>
+-->
+		  <div class="showPlace">
+			<img class="staticImage" src="AboutPageAssets/images/img-show/MathNAS-1.png" alt="sample">
+    		<img class="animatedGif" src="AboutPageAssets/images/img-show/MathNAS-2.png" alt="sample" style="display:none;">
+		  </div>
 		  <article class="section2Content">
 		    <h2 class="sectionContentTitle">MathNAS: If Blocks Have a Role in Mathematical  Architecture Design</h2>
-			  <h3 class="sectionContentSubTitle"><a href="https://wangqinsi1.github.io/" target="_blank">Wang Qinsi*</a>, <strong>Jinghan Ke*</strong>, Zhi Liang</h3>
-			  	<h4 class="sectionContentSubTitle">Neural Information Processing Systems (NeurIPS) 2023</h4>
-			  	  <a href="https://openreview.net/pdf?id=e1l4ZYprQH" class="section2 btn" target="_blank">PDF</a>
-				  <a href="AboutPageAssets/images/other-material/mathnas-poster-6.png" class="section2 btn" target="_blank">Poster</a>
-				  <a href="https://github.com/wangqinsi1/MathNAS" class="section2 btn" target="_blank">Code</a>
-<!--				  <button class="btn">arXiv</button>-->
+			  <h3 class="sectionContentSubTitle"><a href="https://wangqinsi1.github.io/" target="_blank">Wang Qinsi*</a>, <strong style="color: rgb(246,251,255);">Jinghan Ke*</strong>, Zhi Liang</h3>
+			  	<h4 class="sectionContentSubTitle">Neural Information Processing Systems (<strong>NeurIPS</strong>) 2023</h4>
+			  <div class="btn-contaniner">
+				  <div class="btn"><a href="https://openreview.net/pdf?id=e1l4ZYprQH" target="_blank">PDF</a></div>
+				  <div class="btn"><a href="https://neurips.cc/media/PosterPDFs/NeurIPS%202023/70987.png?t=1699703256.6154978" target="_blank">Poster</a></div>
+				  <div class="btn"><a href="https://github.com/wangqinsi1/MathNAS" target="_blank">Code</a></div>
+		 		</div>
 		  </article>
 		</div>
 		<br><br>
 	  <div class="newPaper" id="Diff-LfD">
 		<div class="showPlace">
-<!--				<img src="AboutPageAssets/images/gif-show/path_to_output_gif8.gif" alt="sample">-->
 			<img class="staticImage" src="AboutPageAssets/images/gif-show/diff-lfd-1.gif" alt="Animated">
     		<img class="animatedGif" src="AboutPageAssets/images/gif-show/diff-lfd-2.gif" alt="Animated" style="display:none;">
 		  </div>
 		  <article class="section2Content">
 		    <h2 class="sectionContentTitle">Diff-LfD: Contact-aware Model-based Learning from Visual Demonstration for Robotic Manipulation via Differentiable Physics-based Simulation and Rendering&nbsp;</h2>
-			  <h3 class="sectionContentSubTitle"><a href="https://rolandzhu.github.io/" target="_blank">Xinghao Zhu</a>, <strong>Jinghan Ke</strong>, <a href="https://ariszxxu.github.io/" target="_blank">Zhixuan Xu</a>, Zhixin Sun, Bizhe Bai, Jun Lv, Qingtao Liu, Yuwei Zeng, Qi Ye, Cewu Lu, Masayoshi Tomizuka, <a href="https://linsats.github.io" target="_blank">Lin Shao</a></h3>
-			  	<h4 class="sectionContentSubTitle">Conference on Robot Learning (CoRL) 2023, <strong style="color: rgb(226,73,47); font-size: 125%;">Oral</strong></h4>
-				  <button class="btn">PDF</button>
-			  	  <button class="btn cite-btn" data-citation="@inproceedings{Zhu2023DiffLfD,<br>title={Diff-LfD: Contact-aware Model-based Learning from Visual Demonstration for Robotic Manipulation via Differentiable Physics-based Simulation and Rendering},<br>author={Zhu, Xinghao and Ke, Jinghan and Xu, Zhixuan and Sun, Zhixin and Bai, Bizhe and Lv, Jun and Liu, Qingtao and Zeng, Yuwei and Ye, Qi and Lu, Cewu and Tomizuka, Masayoshi and Shao, Lin},<br>booktitle={Conference on Robot Learning (CoRL)},<br>year={2023}<br>}">Cite</button>
-			  	  <a href="https://sites.google.com/view/diff-lfd" class="section2 btn" target="_blank">Page</a>
-<!--				  <button class="btn">arXiv</button>-->
-		  </article>
+			  <h3 class="sectionContentSubTitle"><a href="https://rolandzhu.github.io/" target="_blank">Xinghao Zhu</a>, <strong style="color: rgb(246,251,255);">Jinghan Ke</strong>, <a href="https://ariszxxu.github.io/" target="_blank">Zhixuan Xu</a>, Zhixin Sun, Bizhe Bai, Jun Lv, Qingtao Liu, Yuwei Zeng, Qi Ye, Cewu Lu, Masayoshi Tomizuka, <a href="https://linsats.github.io" target="_blank">Lin Shao</a></h3>
+			  	<h4 class="sectionContentSubTitle">Conference on Robot Learning (<strong>CoRL</strong>) 2023, <strong style="color: rgb(255,232,108); font-size: 135%;font-style: italic;">Oral</strong></h4>
+			  <div class="btn-contaniner">
+				  <div class="btn"><a href="https://openreview.net/pdf?id=DYPOvNot5F" target="_blank">PDF</a></div>
+				  <div class="btn"><a href="https://sites.google.com/view/diff-lfd" target="_blank">Page</a></div>
+				  <div class="btn cite-btn" data-citation="@inproceedings{Zhu2023DiffLfD,
+					title={Diff-LfD: Contact-aware Model-based Learning from Visual Demonstration for Robotic Manipulation via Differentiable Physics-based Simulation and Rendering},
+					author={Zhu, Xinghao and Ke, Jinghan and Xu, Zhixuan and Sun, Zhixin and Bai, Bizhe and Lv, Jun and Liu, Qingtao and Zeng, Yuwei and Ye, Qi and Lu, Cewu and Tomizuka, Masayoshi and Shao, Lin},
+					booktitle={Conference on Robot Learning (CoRL)},
+					year={2023}}"><a href="javascript:void(0);">Cite</a></div>
+					<div id="copy-confirmation" style="display:none;">Citation copied to clipboard!</div>
+<!--			  	  <button class="btn cite-btn" data-citation="@inproceedings{Zhu2023DiffLfD,<br>title={Diff-LfD: Contact-aware Model-based Learning from Visual Demonstration for Robotic Manipulation via Differentiable Physics-based Simulation and Rendering},<br>author={Zhu, Xinghao and Ke, Jinghan and Xu, Zhixuan and Sun, Zhixin and Bai, Bizhe and Lv, Jun and Liu, Qingtao and Zeng, Yuwei and Ye, Qi and Lu, Cewu and Tomizuka, Masayoshi and Shao, Lin},<br>booktitle={Conference on Robot Learning (CoRL)},<br>year={2023}<br>}">Cite</button>-->
+		 		</div>
+				  </article>
 		</div>
 	</section>
 </section>
 <br><br>
-	
+
+<section class="gallery">
+	<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+	  <img class="image" src="AboutPageAssets/images/gallery/1.png" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/2.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/3.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/4.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/5.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/6.png" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/7.png" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/9.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/10.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/11.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/12.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/13.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/14.jpg" draggable="false" />
+	</div>
+</section>
+
+
 <footer>
   <hr>
   <p class="footerDisclaimer">2023&nbsp; Copyrights - <span>All Rights Reserved</span></p>
   <p class="footerNote">Jinghan Ke&nbsp; &nbsp; <span>&nbsp;</span></p>
 </footer>
 
+<!--
 <div id="citation-modal" style="display:none;">
   <button class="close-modal" onclick="document.getElementById('citation-modal').style.display='none'">&times;</button>
   <div id="citation-content"></div>
   <button id="copy-citation">Copy</button>
 </div>
+-->
+	
+<script>
+	const list = document.querySelectorAll('.list');
+	function activeLink(){
+		list.forEach((item) =>
+		item.classList.remove( 'active'));
+		this.classList.add( 'active')
+	}
+	list.forEach((item) =>
+	item.addEventListener( 'click',activeLink));
 
+</script>
 <script src="AboutPageAssets/styles/aboutPageStyle.js"></script>
 </body>
 </html>
