--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Jinghan Ke's personal homepage</title>
+<title>Jinghan Ke - Research homepage</title>
 	<link rel="icon" href="AboutPageAssets/images/K.png" type="image/x-icon">
 <link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -89,8 +89,9 @@
 		<h1>Jinghan Ke&nbsp;</h1>
 <!--		<h3>HAHAHAHAHA</h3>-->
 		<hr>
-		<p>I am a senior student at the School of Computer Science and Technology, University of Science and Technology of China.</p>
-		<p>Nowadays I work as Research Assistant at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>.</p>
+		<p>I am a senior student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<strong>USTC</strong>). My research interests are in broadly in human-AI/robot interaction, machine learning, and robotics.</p>
+		<p>Nowadays I work as Research Assistant at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. At the same time, I'm working with the CLeAR Lab led by <a href="https://haroldsoh.com/" class="prof-link" target="_blank">Prof. Harold Soh</a> of NUS.</p>
+		<p>Currently, I'm particularly interested in developing algorithms and systems to provide robots with the abilities of perception and manipulation.</p>
 	  </section>
 	  
 	</div>
@@ -201,8 +202,8 @@
 
 <footer>
   <hr>
-  <p class="footerDisclaimer">2023&nbsp; Copyrights - <span>All Rights Reserved</span></p>
-  <p class="footerNote">Jinghan Ke&nbsp; &nbsp; <span>&nbsp;</span></p>
+  <p class="footerDisclaimer">Feel free to download this website's <a href="https://github.com/Ah-miu/Ah-miu.github.io" class="prof-link" target="_blank">source code</a>, just add a link back to my website.</p>
+  <p class="footerNote">Designed by Jinghan Ke&nbsp; &nbsp; <span>&nbsp;</span></p>
 </footer>
 
 <!--
