--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 -->
 				<ul>
 					<li class="list active">
-						<a href="#" target="_blank">
+						<a href="AboutPageAssets/files/JinghanKe-CV.pdf" target="_blank">
 							<span class="icon">
 								<ion-icon name="document-outline"></ion-icon>
 							</span>
@@ -89,7 +89,7 @@
 		<h1>Jinghan Ke&nbsp;</h1>
 <!--		<h3>HAHAHAHAHA</h3>-->
 		<hr>
-		<p>I am a senior student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<strong>USTC</strong>). My research interests are in broadly in human-AI/robot interaction, machine learning, and robotics.</p>
+		<p>I am a senior student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>). My research interests are in broadly in human-AI/robot interaction, machine learning, and robotics.</p>
 		<p>Nowadays I work as Research Assistant at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. At the same time, I'm working with the CLeAR Lab led by <a href="https://haroldsoh.com/" class="prof-link" target="_blank">Prof. Harold Soh</a> of NUS.</p>
 		<p>Currently, I'm particularly interested in developing algorithms and systems to provide robots with the abilities of perception and manipulation.</p>
 	  </section>
@@ -171,7 +171,7 @@
 					author={Zhu, Xinghao and Ke, Jinghan and Xu, Zhixuan and Sun, Zhixin and Bai, Bizhe and Lv, Jun and Liu, Qingtao and Zeng, Yuwei and Ye, Qi and Lu, Cewu and Tomizuka, Masayoshi and Shao, Lin},
 					booktitle={Conference on Robot Learning (CoRL)},
 					year={2023}}"><a href="javascript:void(0);">Cite</a></div>
-					<div id="copy-confirmation" style="display:none;">Citation copied to clipboard!</div>
+					<div id="copy-confirmation" style="display:none; color: white;">Citation copied to clipboard!</div>
 <!--			  	  <button class="btn cite-btn" data-citation="@inproceedings{Zhu2023DiffLfD,<br>title={Diff-LfD: Contact-aware Model-based Learning from Visual Demonstration for Robotic Manipulation via Differentiable Physics-based Simulation and Rendering},<br>author={Zhu, Xinghao and Ke, Jinghan and Xu, Zhixuan and Sun, Zhixin and Bai, Bizhe and Lv, Jun and Liu, Qingtao and Zeng, Yuwei and Ye, Qi and Lu, Cewu and Tomizuka, Masayoshi and Shao, Lin},<br>booktitle={Conference on Robot Learning (CoRL)},<br>year={2023}<br>}">Cite</button>-->
 		 		</div>
 				  </article>
