update v2.41 fix a bug [WeChat]

--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
 		    <img src="AboutPageAssets/images/super-me.png" class="hover-image">
 			<div class="profileLinks">
 				<ul>
+<!--
 					<li class="list active">
-						<a href="" target="_blank">
+						<a href="XXXXXXXXXXX" target="_blank">
 							<span class="icon">
 								<ion-icon name="document-outline"></ion-icon>
 							</span>
 							<span class="icon-text">CV</span>
 						</a>
 					</li>
-					<li class="list">
+-->
+					<li class="list active">
+<!--					<li class="list">-->
 					  <a href="#" id="emailLink">
 						<span class="icon">
 						  <ion-icon name="mail-outline"></ion-icon>
@@ -70,13 +73,14 @@
 					<div class="indicator"></div>
 				</ul>
 			</div>
+	  </div> 
+		
 		  	<div id="wechat-modal" class="modal">
 			  <div class="modal-content">
 				<span class="close">&times;</span>
 				<img src="AboutPageAssets/images/Wechat-QR.jpg" alt="WeChat QR Code">
 			  </div>
 			</div>
-	  </div> 
 	  <!-- Identity details -->
 	  <section class="profileHeader">
 		<h1>Jinghan Ke&nbsp;</h1>
@@ -172,7 +176,7 @@
 <br><br>
 
 	<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-		<h2 class="sectionTitle">Drag Left <- </h2>
+		<h2 class="sectionTitle">Drag Left &lt;- </h2>
 	    <img class="image" src="AboutPageAssets/images/gallery/1.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/5.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/Xijiang thousand familly Miao village.jpg" draggable="false" />
