--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	  <section class="profileHeader">
 		<h1>Jinghan Ke&nbsp;</h1>
 		<hr>
-		<p>I am a senior student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>).</p>
+		<p>I am a undergraduate student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>).</p>
 		<p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>, where I developed algorithms and systems to provide robots with the abilities of perception and manipulation.</p>
 	  </section>
 	</div>
