--- a/index.html
+++ b/index.html
@@ -54,12 +54,31 @@
 					  </a>
 					  <span id="copied" style="display: none;">copied</span>
 					</li>
+<!--
 					<li class="list">
 						<a href="#wetchat" >
 							<span class="icon">
 								<ion-icon name="chatbubbles-outline"></ion-icon>
 							</span>
 							<span class="icon-text">WetChat</span>
+						</a>
+					</li>
+-->
+					<li class="list">
+						<a href="https://github.com/Ah-miu" target="_blank">
+							<span class="icon">
+								<ion-icon name="logo-github"></ion-icon>
+							</span>
+							<span class="icon-text">Github</span>
+						</a>
+					</li>
+<!--
+					<li class="list">
+						<a href="https://github.com/Ah-miu" target="_blank">
+							<span class="icon">
+								<ion-icon name="logo-github"></ion-icon>
+							</span>
+							<span class="icon-text">Github</span>
 						</a>
 					</li>
 					<li class="list">
@@ -70,23 +89,29 @@
 							<span class="icon-text">Github</span>
 						</a>
 					</li>
+-->
 					<div class="indicator"></div>
 				</ul>
 			</div>
 	  </div> 
 		
+<!--
 		  	<div id="wechat-modal" class="modal">
 			  <div class="modal-content">
 				<span class="close">&times;</span>
 				<img src="AboutPageAssets/images/Wechat-QR.jpg" alt="WeChat QR Code">
 			  </div>
 			</div>
+Note: if wanna wechat, activate html-related content and js!
+-->
 	  <!-- Identity details -->
 	  <section class="profileHeader">
 		<h1>Jinghan Ke&nbsp;</h1>
 		<hr>
-		<p>I am an undergraduate student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>).</p>
-		<p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>, where I developed algorithms and systems to provide robots with the abilities of perception and manipulation.</p>
+<!--		<p>I am an undergraduate student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>).</p>-->
+		  <p>I am a research assistant at <a href="https://www.berkeley.edu/" class="prof-link" target="_blank">UC Berkeley</a>, working with <a href="https://people.eecs.berkeley.edu/~kanazawa/" class="prof-link" target="_blank">Prof. Angjoo Kanazawa</a>, <a href="https://people.eecs.berkeley.edu/~keutzer/" class="prof-link" target="_blank">Prof. Kurt Keutzer</a>, and <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" class="prof-link" target="_blank">Prof. Masayoshi Tomizuka</a>.</p>
+		  <p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a></p>
+<!--		<p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>, where I developed algorithms and systems to provide robots with the abilities of perception and manipulation.</p>-->
 	  </section>
 	</div>
 	<div>
@@ -124,9 +149,19 @@
 	
 	<!-- PUBLICATIONS -->
 	<section class="section2">
-		<h2 class="sectionTitle">Publications&nbsp;</h2>
+		<h2 class="sectionTitle">
+		  Selected Publications | 
+		  <a href="https://scholar.google.com/citations?user=Vnrm6L8AAAAJ&hl=en" target="_blank">
+			Google Scholar
+		  </a>
+		  <span class="icon">
+			<ion-icon name="school-outline"></ion-icon>
+		  </span>
+		</h2>
+
 <!--		<hr class="sectionTitleRule">-->
 		<hr class="sectionTitleRule2">
+		
 
 	  <div class="newPaper" id="MathNAS">
 <!--
@@ -150,6 +185,7 @@
 		  </article>
 		</div>
 		<br><br>
+		
 	  <div class="newPaper" id="Diff-LfD">
 		<div class="showPlace">
 			<img class="staticImage" src="AboutPageAssets/images/gif-show/diff-lfd-1.gif" alt="Animated">
