--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="profileContainer">
 	  <div class="profilePhoto">
 			<img src="AboutPageAssets/images/super-yeah.jpg" class="default-image" >
-		    <img src="AboutPageAssets/images/super-me.png" class="hover-image">
+		    <img src="AboutPageAssets/images/super-me.gif" class="hover-image">
 			<div class="profileLinks">
 				<ul>
 <!--
@@ -110,7 +110,8 @@ Note: if wanna wechat, activate html-related content and js!
 		<hr>
 <!--		<p>I am an undergraduate student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>).</p>-->
 		  <p>I am a research assistant at <a href="https://www.berkeley.edu/" class="prof-link" target="_blank">UC Berkeley</a>, working with <a href="https://people.eecs.berkeley.edu/~kanazawa/" class="prof-link" target="_blank">Prof. Angjoo Kanazawa</a>, <a href="https://people.eecs.berkeley.edu/~keutzer/" class="prof-link" target="_blank">Prof. Kurt Keutzer</a>, and <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" class="prof-link" target="_blank">Prof. Masayoshi Tomizuka</a>.</p>
-		  <p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a></p>
+		  <p>I am admitted to UT Austin's Ph.D. program and will be advised by <a href="https://www.cs.utexas.edu/~huangqx/" class="prof-link" target="_blank">Prof. Qixing Huang</a> and <a href="https://www.ece.utexas.edu/people/faculty/atlas-wang" class="prof-link" target="_blank">Prof. Atlas Wang</a>.</p>
+		  <p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. I received my bachelor's degree from <a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">University of Science and Technology of China</a>.</p>
 <!--		<p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>, where I developed algorithms and systems to provide robots with the abilities of perception and manipulation.</p>-->
 	  </section>
 	</div>
@@ -119,11 +120,12 @@ Note: if wanna wechat, activate html-related content and js!
 	</div>
 </header>
 	
+<!--
 <section class="scroll-show-container">
   <a href="https://sites.google.com/view/diff-lfd/" target="_blank">
     <img src="AboutPageAssets/images/gif-show/teapot.gif" alt="Teapot">
   </a>
-<!--  <img src="AboutPageAssets/images/gif-show/VR-treadmill.gif" alt="VR Treadmill">-->
+  <img src="AboutPageAssets/images/gif-show/VR-treadmill.gif" alt="VR Treadmill">
   <a href="https://github.com/Ah-miu/Feng" target="_blank">
     <img src="AboutPageAssets/images/gif-show/FENG.gif" alt="FENG">
   </a>
@@ -132,11 +134,13 @@ Note: if wanna wechat, activate html-related content and js!
   </a>
   <img src="AboutPageAssets/images/gif-show/手偶舞.gif" alt="Hand Puppet Dance">
 </section>
+-->
 
 	
 <!-- content -->
 <section class="mainContent"> 
   <!-- NEWS -->
+<!--
   <section class="section1">
     <h2 class="sectionTitle">News&nbsp;</h2>
 	<hr class="sectionTitleRule">
@@ -146,7 +150,8 @@ Note: if wanna wechat, activate html-related content and js!
 	  <p><span><span class="icon">								<ion-icon name="musical-notes-outline"></ion-icon></span> [ 26 Oct 2022 ] : </span> Joined the LinS lab at NUS and started doing research.</p>
     </div>
   </section>
-	
+-->
+	<br><br>
 	<!-- PUBLICATIONS -->
 	<section class="section2">
 		<h2 class="sectionTitle">
@@ -161,7 +166,36 @@ Note: if wanna wechat, activate html-related content and js!
 
 <!--		<hr class="sectionTitleRule">-->
 		<hr class="sectionTitleRule2">
-		
+
+		<div class="newPaper" id="Dobi-SVD" style="background-color: rgba(219,231,251,1);">
+<!--
+		<div class="onlyIMG">
+			<img src="AboutPageAssets/images/img-show/Dobi-SVD_overview.png" alt="sample">
+		  </div>
+-->
+		  <div class="showPlace">
+			<img class="staticImage" src="AboutPageAssets/images/img-show/Dobi-SVD.jpg">
+    		<img class="animatedGif" src="AboutPageAssets/images/img-show/Dobi-SVD_overview.png" style="display:none;">
+		  </div>
+		  <article class="section2Content">
+		    <h2 class="sectionContentTitle" style="color: rgba(15,78,133,1);">Dobi-SVD: Differentiable SVD for LLM Compression and Some New Perspectives</h2>
+			  <h3 class="sectionContentSubTitle" style="color: rgba(148,167,217,1);">
+				  <a href="https://wangqinsi1.github.io/" target="_blank" style="color: rgba(148,167,217,1);">Wang Qinsi*</a>, 
+				  <strong style="color: rgb(255,255,255);">Jinghan Ke*</strong>, 
+				  <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" target="_blank" style="color: rgba(148,167,217,1);">Masayoshi Tomizuka</a>,
+				  <a href="https://ece.duke.edu/people/yiran-chen/" target="_blank" style="color: rgba(148,167,217,1);">Yiran Chen</a>,
+				  <a href="https://people.eecs.berkeley.edu/~keutzer/" target="_blank" style="color: rgba(148,167,217,1);">Kurt Keutzer</a>,
+				  <a href="https://www.chenfengx.com/" target="_blank" style="color: rgba(148,167,217,1);">Chenfeng Xu<sup>&#x271D;</sup></a>
+				  (* indicate equal contribution. Order is decided by coin flip. <sup>&#x271D;</sup> denotes corresponding author.)</h3>
+			  	<h4 class="sectionContentSubTitle" style="color: rgba(115,145,201,1);">International Conference on Learning Representations (<strong>ICLR</strong>) 2025</h4>
+			  <div class="btn-contaniner">
+				  <div class="btn"><a href="https://arxiv.org/abs/2502.02723" target="_blank">Paper</a></div>
+				  <div class="btn"><a href="https://ah-miu.github.io/Dobi-SVD.page/" target="_blank">Page</a></div>
+				  <div class="btn"><a href="https://github.com/wangqinsi1/Dobi-SVD" target="_blank">Code</a></div>
+		 		</div>
+		  </article>
+		</div>
+		<br><br>
 
 	  <div class="newPaper" id="MathNAS">
 <!--
@@ -214,25 +248,15 @@ Note: if wanna wechat, activate html-related content and js!
 	<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
 		<h2 class="sectionTitle">Drag Left &lt;- </h2>
 	    <img class="image" src="AboutPageAssets/images/gallery/1.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/5.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/Xijiang thousand familly Miao village.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/XA.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/BJ.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/4.jpg" draggable="false" />
-<!--
-		<img class="image" src="AboutPageAssets/images/gallery/6.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/7.jpg" draggable="false" />
--->
-		<img class="image" src="AboutPageAssets/images/gallery/8.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/Emei Mountain.jpg" draggable="false" />
-<!--		<img class="image" src="AboutPageAssets/images/gallery/9.jpg" draggable="false" />-->
-		<img class="image" src="AboutPageAssets/images/gallery/10.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/12.jpg" draggable="false" />
-<!--		<img class="image" src="AboutPageAssets/images/gallery/11.jpg" draggable="false" />-->
+		<img class="image" src="AboutPageAssets/images/gallery/BJ4.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/ZQ.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/JZ2.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/13.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/14.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/15.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/3.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/2.jpg" draggable="false" />
-<!--		<img class="image" src="AboutPageAssets/images/gallery/haha.jpg" draggable="false" />-->
 	</div>
 
 
