--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Jinghan Ke - Research homepage</title>
-	<link rel="icon" href="AboutPageAssets/images/K.png" type="image/x-icon">
+<link rel="icon" href="AboutPageAssets/images/hi.png" type="image/x-icon">
 <link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -30,8 +30,8 @@
 -->
 	<div class="profileContainer">
 	  <div class="profilePhoto">
-			<img src="AboutPageAssets/images/super-yeah.jpg" class="default-image" >
-		    <img src="AboutPageAssets/images/super-me.gif" class="hover-image">
+			<img src="AboutPageAssets/images/xiaoen.jpg" class="default-image" >
+		    <img src="AboutPageAssets/images/Jh.K.jpg" class="hover-image">
 			<div class="profileLinks">
 				<ul>
 <!--
@@ -109,9 +109,16 @@ Note: if wanna wechat, activate html-related content and js!
 		<h1>Jinghan Ke&nbsp;</h1>
 		<hr>
 <!--		<p>I am an undergraduate student at the School of Computer Science and Technology (<strong>CS</strong>), University of Science and Technology of China (<a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>).</p>-->
+<!--
 		  <p>I am a research assistant at <a href="https://www.berkeley.edu/" class="prof-link" target="_blank">UC Berkeley</a>, working with <a href="https://people.eecs.berkeley.edu/~kanazawa/" class="prof-link" target="_blank">Prof. Angjoo Kanazawa</a>, <a href="https://people.eecs.berkeley.edu/~keutzer/" class="prof-link" target="_blank">Prof. Kurt Keutzer</a>, and <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" class="prof-link" target="_blank">Prof. Masayoshi Tomizuka</a>.</p>
 		  <p>I am admitted to UT Austin's Ph.D. program and will be advised by <a href="https://www.cs.utexas.edu/~huangqx/" class="prof-link" target="_blank">Prof. Qixing Huang</a> and <a href="https://www.ece.utexas.edu/people/faculty/atlas-wang" class="prof-link" target="_blank">Prof. Atlas Wang</a>.</p>
-		  <p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. I received my bachelor's degree from <a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">University of Science and Technology of China</a>.</p>
+		  <p>Previously, I worked at <a href="https://nus.edu.sg/" class="prof-link" target="_blank">NUS</a> LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. I received my bachelor's degree from <a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">University of Science and Technology of China</a>.</p>
+-->
+		  
+		  <p>I am a first-year Ph.D. student at <a href="https://www.utexas.edu/" class="prof-link" target="_blank">UT Austin</a>, advised by <a href="https://www.cs.utexas.edu/~huangqx/" class="prof-link" target="_blank">Prof. Qixing Huang</a> and <a href="https://www.ece.utexas.edu/people/faculty/atlas-wang" class="prof-link" target="_blank">Prof. Atlas Wang</a>.</p>
+
+
+		  <p>Before joining UT Austin, I was a research assistant at <a href="https://www.berkeley.edu/" class="prof-link" target="_blank">UC Berkeley</a>, working with <a href="https://people.eecs.berkeley.edu/~kanazawa/" class="prof-link" target="_blank">Prof. Angjoo Kanazawa</a>, <a href="https://people.eecs.berkeley.edu/~keutzer/" class="prof-link" target="_blank">Prof. Kurt Keutzer</a>, and <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" class="prof-link" target="_blank">Prof. Masayoshi Tomizuka</a>. Prior to that, I worked at the LinS Lab at <a href="https://nus.edu.sg/" class="prof-link" target="_blank">NUS</a> under <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. I received my bachelor's degree from the <a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">University of Science and Technology of China</a>.</p>
 <!--		<p>Previously, I worked at NUS LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>, where I developed algorithms and systems to provide robots with the abilities of perception and manipulation.</p>-->
 	  </section>
 	</div>
@@ -142,7 +149,12 @@ Note: if wanna wechat, activate html-related content and js!
   <!-- NEWS -->
 <!--
   <section class="section1">
-    <h2 class="sectionTitle">News&nbsp;</h2>
+    <h2 class="sectionTitle">&nbsp;News</h2>
+	<h2 class="sectionTitle">
+	  <img src="AboutPageAssets/images/dulululu.png" alt="Speaker Icon" style="width: 120px; height: 120px; vertical-align: middle; margin-right: 6px;">
+	  News
+	</h2>
+
 	<hr class="sectionTitleRule">
     <div class="section1Content">
 	  <p><span><span class="icon">								<ion-icon name="musical-notes-outline"></ion-icon></span> [ Sep 2023 ] : </span> MathNAS was accepted by NeurIPS 2023.</p>
@@ -151,6 +163,7 @@ Note: if wanna wechat, activate html-related content and js!
     </div>
   </section>
 -->
+	
 	<br><br>
 	<!-- PUBLICATIONS -->
 	<section class="section2">
@@ -252,7 +265,7 @@ Note: if wanna wechat, activate html-related content and js!
 		<img class="image" src="AboutPageAssets/images/gallery/BJ.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/4.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/BJ4.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/ZQ.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/duoduo.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/JZ2.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/13.jpg" draggable="false" />
 		<img class="image" src="AboutPageAssets/images/gallery/3.jpg" draggable="false" />
