Angles Don't Lie

--- a/index.html
+++ b/index.html
@@ -54,25 +54,16 @@
 					  </a>
 					  <span id="copied" style="display: none;">copied</span>
 					</li>
-<!--
+
 					<li class="list">
-						<a href="#wetchat" >
+						<a href="https://www.linkedin.com/in/jinghan-ke-a14869377" target="_blank">
 							<span class="icon">
-								<ion-icon name="chatbubbles-outline"></ion-icon>
+								<ion-icon name="logo-linkedin"></ion-icon>
 							</span>
-							<span class="icon-text">WetChat</span>
+							<span class="icon-text">Linkedin</span>
 						</a>
 					</li>
--->
-					<li class="list">
-						<a href="https://github.com/Ah-miu" target="_blank">
-							<span class="icon">
-								<ion-icon name="logo-github"></ion-icon>
-							</span>
-							<span class="icon-text">Github</span>
-						</a>
-					</li>
-<!--
+
 					<li class="list">
 						<a href="https://github.com/Ah-miu" target="_blank">
 							<span class="icon">
@@ -81,15 +72,16 @@
 							<span class="icon-text">Github</span>
 						</a>
 					</li>
+
 					<li class="list">
-						<a href="https://github.com/Ah-miu" target="_blank">
+						<a href="https://x.com/jinghan_ke" target="_blank">
 							<span class="icon">
-								<ion-icon name="logo-github"></ion-icon>
+								<ion-icon name="logo-twitter"></ion-icon>
 							</span>
-							<span class="icon-text">Github</span>
+							<span class="icon-text">Twitter</span>
 						</a>
 					</li>
--->
+
 					<div class="indicator"></div>
 				</ul>
 			</div>
@@ -115,7 +107,7 @@ Note: if wanna wechat, activate html-related content and js!
 		  <p>Previously, I worked at <a href="https://nus.edu.sg/" class="prof-link" target="_blank">NUS</a> LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. I received my bachelor's degree from <a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">University of Science and Technology of China</a>.</p>
 -->
 		  
-		  <p>I am a Ph.D. student (25Fall) at <a href="https://www.utexas.edu/" class="prof-link" target="_blank">UT Austin</a>, co-advised by <a href="https://www.cs.utexas.edu/~huangqx/" class="prof-link" target="_blank">Prof. Qixing Huang</a> and <a href="https://www.ece.utexas.edu/people/faculty/atlas-wang" class="prof-link" target="_blank">Prof. Atlas Wang</a>.</p>
+		  <p>I am a CS Ph.D. student (25Fall) at <a href="https://www.utexas.edu/" class="prof-link" target="_blank">UT Austin</a>, co-advised by <a href="https://www.cs.utexas.edu/~huangqx/" class="prof-link" target="_blank">Prof. Qixing Huang</a> and <a href="https://www.ece.utexas.edu/people/faculty/atlas-wang" class="prof-link" target="_blank">Prof. Atlas Wang</a>.</p>
 
 
 		  <p>Previously, I was a research assistant at <a href="https://www.berkeley.edu/" class="prof-link" target="_blank">UC Berkeley</a>, working with <a href="https://people.eecs.berkeley.edu/~kanazawa/" class="prof-link" target="_blank">Prof. Angjoo Kanazawa</a>, <a href="https://people.eecs.berkeley.edu/~keutzer/" class="prof-link" target="_blank">Prof. Kurt Keutzer</a>, and <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" class="prof-link" target="_blank">Prof. Masayoshi Tomizuka</a>. Prior to that, I worked at <a href="https://nus.edu.sg/" class="prof-link" target="_blank">NUS</a> under <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. I received my bachelor's degree from the <a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>.</p>
@@ -169,7 +161,7 @@ Note: if wanna wechat, activate html-related content and js!
 	<section class="section2">
 		<h2 class="sectionTitle">
 		  Selected Publications | 
-		  <a href="https://scholar.google.com/citations?user=Vnrm6L8AAAAJ&hl=en" target="_blank">
+		  <a href="https://scholar.google.com/citations?hl=en&user=Vnrm6L8AAAAJ&view_op=list_works&sortby=pubdate" target="_blank">
 			Google Scholar
 		  </a>
 		  <span class="icon">
@@ -180,6 +172,42 @@ Note: if wanna wechat, activate html-related content and js!
 <!--		<hr class="sectionTitleRule">-->
 		<hr class="sectionTitleRule2">
 
+		<!-- Angles Don't Lie -->
+
+		<div class="newPaper" id="Angles">
+		  <div class="showPlace">
+			<img class="staticImage" src="AboutPageAssets/images/img-show/angles.png">
+    		<img class="animatedGif" src="AboutPageAssets/images/img-show/angles-overview.png" style="display:none;">
+		  </div>
+		  <article class="section2Content">
+		    <h2 class="sectionContentTitle">Angles Don't Lie: Unlocking Training-Efficient RL Through the Model's Own Signals</h2>
+			  <h3 class="sectionContentSubTitle">
+				  <!-- <a href=" " target="_blank" style="color: rgba(148,167,217,1);"> </a> -->
+				  <a href="https://wangqinsi1.github.io/" target="_blank" style="color: rgba(148,167,217,1);">Wang Qinsi</a>, 
+				  <strong style="color: rgb(255,255,255);">Jinghan Ke</strong>, 
+				  <a href="https://openreview.net/profile?id=%7EHancheng_Ye1" target="_blank" style="color: rgba(148,167,217,1);">Hancheng Ye</a>, 
+				  <a href="https://openreview.net/profile?id=~Yueqian_Lin2" target="_blank" style="color: rgba(148,167,217,1);">Yueqian Lin</a>, 
+				  <a href="https://yuzhe-fu.github.io/" target="_blank" style="color: rgba(148,167,217,1);">Yuzhe Fu</a>, 
+				  <a href="https://jayzhang42.github.io/graphical_homepage/" target="_blank" style="color: rgba(148,167,217,1);">Jianyi Zhang</a>, 
+				  <a href="https://people.eecs.berkeley.edu/~keutzer/" target="_blank" style="color: rgba(148,167,217,1);">Kurt Keutzer</a>,
+				  <a href="https://www.chenfengx.com/" target="_blank" style="color: rgba(148,167,217,1);">Chenfeng Xu<sup>&#x271D;</sup></a>,
+				  <a href="https://ece.duke.edu/people/yiran-chen/" target="_blank" style="color: rgba(148,167,217,1);">Yiran Chen<sup>&#x271D;</sup></a>
+				  (<sup>&#x271D;</sup> corresponding author.)</h3>
+			  	<h4 class="sectionContentSubTitle">
+					Neural Information Processing Systems (<strong>NeurIPS</strong>) 2025, 
+					<strong style="color: rgb(255,232,108); font-size: 135%;font-style: italic;">Spotlight</strong>
+				</h4>
+			  <div class="btn-contaniner">
+				  <div class="btn"><a href="https://arxiv.org/abs/2506.02281" target="_blank">Paper</a></div>
+				  <!-- <div class="btn"><a href="" target="_blank">Page</a></div> -->
+				  <div class="btn"><a href="https://github.com/wangqinsi1/GAINRL" target="_blank">Code</a></div>
+		 		</div>
+		  </article>
+		</div>
+		<br><br>
+
+		<!-- Dobi-SVD -->
+
 		<div class="newPaper" id="Dobi-SVD" style="background-color: rgba(219,231,251,1);">
 <!--
 		<div class="onlyIMG">
@@ -187,7 +215,7 @@ Note: if wanna wechat, activate html-related content and js!
 		  </div>
 -->
 		  <div class="showPlace">
-			<img class="staticImage" src="AboutPageAssets/images/img-show/Dobi-SVD.jpg">
+			<img class="staticImage" src="AboutPageAssets/images/img-show/Dobi-SVD.png">
     		<img class="animatedGif" src="AboutPageAssets/images/img-show/Dobi-SVD_overview.png" style="display:none;">
 		  </div>
 		  <article class="section2Content">
@@ -240,8 +268,18 @@ Note: if wanna wechat, activate html-related content and js!
 		  </div>
 		  <article class="section2Content">
 		    <h2 class="sectionContentTitle">Diff-LfD: Contact-aware Model-based Learning from Visual Demonstration for Robotic Manipulation via Differentiable Physics-based Simulation and Rendering&nbsp;</h2>
-			  <h3 class="sectionContentSubTitle"><a href="https://rolandzhu.github.io/" target="_blank">Xinghao Zhu</a>, <strong style="color: rgb(246,251,255);">Jinghan Ke</strong>, <a href="https://ariszxxu.github.io/" target="_blank">Zhixuan Xu</a>, <a href="https://applewonder.github.io/" target="_blank">Zhixin Sun</a>, <a href="https://baibizhe.github.io/" target="_blank">Bizhe Bai</a>, <a href="https://lyuj1998.github.io/" target="_blank">Jun Lv</a>, ..., <a href="https://www.mvig.org/" target="_blank">Cewu Lu</a>, <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" target="_blank">Masayoshi Tomizuka</a>, <a href="https://linsats.github.io" target="_blank">Lin Shao</a></h3>
-			  	<h4 class="sectionContentSubTitle">Conference on Robot Learning (<strong>CoRL</strong>) 2023, <strong style="color: rgb(255,232,108); font-size: 135%;font-style: italic;">Oral</strong></h4>
+			  <h3 class="sectionContentSubTitle">
+				<a href="https://rolandzhu.github.io/" target="_blank">Xinghao Zhu</a>, 
+				<strong style="color: rgb(246,251,255);">Jinghan Ke</strong>, 
+				<a href="https://ariszxxu.github.io/" target="_blank">Zhixuan Xu</a>, 
+				<a href="https://applewonder.github.io/" target="_blank">Zhixin Sun</a>, 
+				<a href="https://baibizhe.github.io/" target="_blank">Bizhe Bai</a>, 
+				<a href="https://lyuj1998.github.io/" target="_blank">Jun Lv</a>, ..., 
+				<a href="https://www.mvig.org/" target="_blank">Cewu Lu</a>, 
+				<a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" target="_blank">Masayoshi Tomizuka</a>, 
+				<a href="https://linsats.github.io" target="_blank">Lin Shao</a></h3>
+			  	<h4 class="sectionContentSubTitle">Conference on Robot Learning (<strong>CoRL</strong>) 2023, 
+					<strong style="color: rgb(255,232,108); font-size: 135%;font-style: italic;">Oral</strong></h4>
 			  <div class="btn-contaniner">
 				  <div class="btn"><a href="https://openreview.net/pdf?id=DYPOvNot5F" target="_blank">PDF</a></div>
 				  <div class="btn"><a href="https://sites.google.com/view/diff-lfd" target="_blank">Page</a></div>
